// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar component matches snapshot 1`] = `
<div
  className="sc-htpNat csDlPS"
/>
`;

exports[`Button component matches snapshot 1`] = `
<button
  className="sc-dnqmqq bBTZLR"
/>
`;

exports[`Layout component matches snapshot 1`] = `
<div
  className="sc-bwzfXH bHMTeK"
/>
`;

exports[`List component matches snapshot 1`] = `
<ul
  className="sc-ifAKCX kxovTQ"
/>
`;

exports[`ListItem component matches snapshot 1`] = `
<li
  className="sc-EHOje gXHTYI"
/>
`;

exports[`Page component matches snapshot 1`] = `
<div
  className="sc-bdVaJa fPdLJN"
/>
`;

exports[`PaymentMethods component matches snapshot 1`] = `
<div
  className="sc-bdVaJa fPdLJN"
>
  <div
    className="sc-bwzfXH bHMTeK"
  >
    <h1>
      Payment Methods
      <button
        className="sc-dnqmqq bBTZLR"
        onClick={[Function]}
      >
        <svg>
          SyncIcon.svg
        </svg>
      </button>
    </h1>
    <h2>
      Click to expand and view payment method details
    </h2>
    <ul
      className="sc-ifAKCX kxovTQ"
    />
  </div>
</div>
`;

exports[`PaymentMethods container matches snapshot 1`] = `
<div
  className="sc-bdVaJa fPdLJN"
>
  <div
    className="sc-bwzfXH bHMTeK"
  >
    <h1>
      Payment Methods
      <button
        className="sc-dnqmqq bBTZLR"
        onClick={[Function]}
      >
        <svg>
          SyncIcon.svg
        </svg>
      </button>
    </h1>
    <h2>
      Click to expand and view payment method details
    </h2>
    <ul
      className="sc-ifAKCX kxovTQ"
    />
  </div>
</div>
`;

exports[`PaymentMethods container matches snapshot 2`] = `
<div
  className="sc-bdVaJa fPdLJN"
>
  <div
    className="sc-bwzfXH bHMTeK"
  >
    <h1>
      Payment Methods
      <button
        className="sc-dnqmqq bBTZLR"
        onClick={[Function]}
      >
        <svg>
          SyncIcon.svg
        </svg>
      </button>
    </h1>
    <h2>
      Click to expand and view payment method details
    </h2>
    <ul
      className="sc-ifAKCX kxovTQ"
    />
  </div>
</div>
`;

exports[`Payments component matches snapshot 1`] = `
<div
  className="sc-bdVaJa fPdLJN"
>
  <div
    className="sc-bwzfXH bHMTeK"
  >
    <h1>
      Payment Methods
      <button
        className="sc-dnqmqq bBTZLR"
        onClick={[Function]}
      >
        <svg>
          SyncIcon.svg
        </svg>
      </button>
    </h1>
    <h2>
      Click to expand and view payment method details
    </h2>
    <ul
      className="sc-ifAKCX kxovTQ"
    />
  </div>
</div>
`;
